# Hady-Shady-Projekt

./: README.md
blatt_01/: README.md  game.py  main.py  pyproject.toml
blatt_01/src/: aufgabe_1_1.py  aufgabe_1_2.py  converter.py
blatt_01/tests/: test_aufgabe_1_1.py  test_aufgabe_1_2.py  test_converter.py
